--- a/frontend/src/scss/variables.scss
+++ b/frontend/src/scss/variables.scss
@@ -1,7 +1,7 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing:  border-box;
+  box-sizing:  border-box; 
 }
 
 //transitions
@@ -12,3 +12,11 @@ $white: #fff;
 $header: #262626;
 $hover: #888888;
 $light-bg: #8c8c8c;
+
+
+
+//Text Settings
+$font-primary: "Oswald", sans-serif;
+h1,h2,h3,h4,h5,h6,p{
+  font-family: $font-primary;
+}
